# ravemodemfactory

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
build-aux/: Makefile.am
doc/: Makefile.am  RMF-high-level.dia  RMF.dia  RaveModemFactory-architecture.odt
examples/: example.cpp
m4/: compiler-warnings.m4
src/: Makefile.am
src/librmf/: Makefile.am  rmf-operations.cpp  rmf-operations.h  rmf-types.h
src/librmf-common/: Makefile.am  rmf-messages-private.c  rmf-messages-private.h  rmf-messages.c  rmf-messages.h
src/librmf-common/test/: Makefile.am  test-message-private.c  test-message.c
src/rmfcli/: Makefile.am  rmfcli.cpp
src/rmfd/: Makefile.am  rmfd-charsets.c  rmfd-charsets.h  rmfd-data-wwan.c  rmfd-data-wwan.h  rmfd-data.c  rmfd-data.h  rmfd-error.c  rmfd-error.h  rmfd-manager.c  rmfd-manager.h  rmfd-port-data-wwan-service  rmfd-port-data-wwan.c  rmfd-port-data-wwan.h  rmfd-port-data.c  rmfd-port-data.h  rmfd-port-processor-qmi.c  rmfd-port-processor-qmi.h  rmfd-port-processor.c  rmfd-port-processor.h  rmfd-port.c  rmfd-port.h  rmfd-processor-qmi.c  rmfd-processor-qmi.h  rmfd-processor.c  rmfd-processor.h  rmfd-sms-list.c  rmfd-sms-list.h  rmfd-sms-part-3gpp.c  rmfd-sms-part-3gpp.h  rmfd-sms-part.c  rmfd-sms-part.h  rmfd-sms.c  rmfd-sms.h  rmfd-stats.c  rmfd-stats.h  rmfd-syslog.c  rmfd-syslog.h  rmfd-utils.c  rmfd-utils.h  (+5 more)
src/rmfd/test/: Makefile.am  test-stats.c
test/: Makefile.am  rmfcli-test-all  rmfcli-test-all.README
